[package]
name = "gstuff"
version = "0.7.8"
edition = "2018"
authors = ["ArtemGr <artemciy@gmail.com>"]

description = "Small macro and trinkets that make my life easier."
documentation = "https://docs.rs/gstuff/"
repository = "https://github.com/ArtemGr/gstuff.rs"
license = "MIT"

[lib]
name = "gstuff"
path = "gstuff.rs"
doctest = false

[features]
nightly = []
base62 = ["num-bigint", "num-traits", "smallvec"]
base62j = ["smallvec"]
base91 = ["smallvec"]
rdtsc = []
re = ["fomat-macros"]

[dependencies]
crossterm = {version = "0.21", optional = true}
fomat-macros = {version = "0.3", optional = true}
lazy_static = "1"
libc = "0.2"
num-bigint = {version = "0.4", optional = true}
num-traits = {version = "0.2", optional = true}
smallvec = {version = "1.4", optional = true, features = ["const_generics", "union", "write"]}
winapi = {version = "0.3", optional = true, features = ["wingdi", "wincon", "winuser"]}
