[package]
name = "gstuff"
version = "0.8.24"
edition = "2021"
authors = ["ArtemGr <artemciy@gmail.com>"]

description = "Small macro and trinkets that make my life easier."
documentation = "https://docs.rs/gstuff/"
repository = "https://github.com/ArtemGr/gstuff.rs"
license = "MIT"

[lib]
name = "gstuff"
path = "gstuff.rs"
doctest = false

[features]
nightly = []
base62 = ["num-bigint", "num-traits", "smallvec"]
base62j = ["smallvec"]
base91 = ["smallvec"]
rdtsc = []  # nop
re = ["fomat-macros"]
lines = ["nix", "re", "winapi", "memmap2", "memchr"]
sqlite = ["base62", "base91", "ser", "gxhash", "lines", "re", "reffers", "rusqlite", "smallvec", "crossterm", "inlinable_string", "fomat-macros"]
sync = ["fast_rsync", "gxhash"]
link = ["fomat-macros", "gxhash", "indexmap", "inlinable_string", "serde_json"]
ser = ["serde", "serde_json", "indexmap/serde", "inlinable_string/serde"]

[dependencies]
chrono = {version = "0.4", optional = true}
crossterm = {version = "0.28", optional = true}
fast_rsync = {version = "0.2", optional = true}
fomat-macros = {version = "0.3", optional = true}
gxhash = {version = "3", optional = true}
indexmap = {version = "2", optional = true}
inlinable_string = {version = "0.1", optional = true}
libc = "0.2"
memchr = {version = "2", optional = true}
memmap2 = {version = "0.9", optional = true}
nix = {version = "0.29", features = ["fs"], optional = true}
num-bigint = {version = "0.4", optional = true}
num-traits = {version = "0.2", optional = true}
reffers = {version = "0.7", optional = true}
rusqlite = {version = "0.33", features = ["bundled", "functions", "vtab"], optional = true}
serde = {version = "1", features = ["derive"], optional = true}
serde_json = {version = "1", optional = true}
smallvec = {version = "1", optional = true, features = ["const_generics", "union", "write"]}
winapi = {version = "0.3", optional = true, features = ["errhandlingapi", "fileapi", "wingdi", "wincon", "winuser", "std"]}

[dev-dependencies]
rand = {version = "0.8", features = ["small_rng"]}
scopeguard = "1"
